fix: Change icon to visible size

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,7 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   height: -webkit-fill-available;
 }
 body {
-  height: 100vh;
   height: -webkit-fill-available;
 }
